--- a/README.me
+++ b/README.me
@@ -1,1 +1,15 @@
-NFT
+## NFT Mobile/iOS App
+
+## Tech Stack Used:
+ - React Native, React navigation, Expo Go, 
+
+
+## cmd to install required dependencies:
+* expo init ./
+* npm install --legacy-peer-deps
+* npm audit fix
+
+
+## Run Server on Local:
+* npm start
+* Scan QR code on Expo Go app
