--- a/README.me
+++ b/README.me
@@ -13,3 +13,16 @@
 ## Run Server on Local:
 * npm start
 * Scan QR code on Expo Go app
+
+## Build and Deployment:
+- Classic SDK < 49
+* npm install expo@latest expo-cli@latest
+* npx expo-cli publish
+
+- EAS SDK > 50
+* npm install --global eas-cli
+* eas login
+* eas update:configure
+* eas build:configure
+* eas build
+* eas update
